[Fix Attempt] Hide Scrollbar

--- a/designs.css
+++ b/designs.css
@@ -1,8 +1,6 @@
+*{margin:0;}
 html {
-  height: 100vh;
-  width: 100vw;
   background-color: #ffffff;
-  /* background: url('bg_desktop.jpg'); */
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
@@ -15,7 +13,17 @@ body {
   padding: 2rem;
 }
 
-.parent {
+html, body {
+  height: 99%;
+}
+
+.parent-container {
+  height: 100%;
+  width: 100%;
+}
+
+
+.content {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -24,6 +32,18 @@ body {
   overflow-y: auto;
   margin-top: 5%;
   overflow-x: hidden;
+  width: 100%;
+  height: 99%;
+  overflow: auto;
+
+  overflow-y: scroll;
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none;  /* Internet Explorer 10+ */
+}
+
+.content::-webkit-scrollbar {
+  width: 0;
+  height: 0;
 }
 
 .date {
