--- a/mobile_n_tablet.css
+++ b/mobile_n_tablet.css
@@ -4,7 +4,7 @@
     font-size: 9.5px;
   }
 
-  .parent {
+  .content {
     height: 83vh;
     margin-top: 19%;
   }
@@ -26,7 +26,7 @@
     font-size: 13px;
   }
 
-  .parent {
+  .content {
     height: 83vh;
     margin-top: 15%;
   }
